--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,12 @@
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "express-session": "^1.17.3",
         "git": "^0.1.5",
         "mongoose": "^7.5.3",
         "node": "^20.7.0",
-        "nodemon": "^3.0.1"
+        "nodemailer": "^6.9.7",
+        "nodemon": "^3.0.1",
+        "otp-generator": "^4.0.1"
     }
 }
