--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,13 @@
         "express": "^4.18.2",
         "express-session": "^1.17.3",
         "git": "^0.1.5",
+        "jsonwebtoken": "^9.0.2",
         "mongoose": "^7.5.3",
+        "multer": "^1.4.5-lts.1",
         "node": "^20.7.0",
         "nodemailer": "^6.9.7",
         "nodemon": "^3.0.1",
-        "otp-generator": "^4.0.1"
+        "otp-generator": "^4.0.1",
+        "stripe": "^14.3.0"
     }
 }
