--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
+        "express-validator": "^7.0.1",
         "git": "^0.1.5",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^7.5.3",
