--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,16 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
+        "express-validator": "^7.0.1",
         "git": "^0.1.5",
+        "jsonwebtoken": "^9.0.2",
         "mongoose": "^7.5.3",
+        "multer": "^1.4.5-lts.1",
         "node": "^20.7.0",
         "nodemailer": "^6.9.7",
         "nodemon": "^3.0.1",
-        "otp-generator": "^4.0.1"
+        "otp-generator": "^4.0.1",
+        "session": "^0.1.0",
+        "stripe": "^14.4.0"
     }
 }
