--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "license": "ISC",
     "dependencies": {
         "axios": "^1.5.1",
+        "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
@@ -23,9 +24,8 @@
         "nodemailer": "^6.9.7",
         "nodemon": "^3.0.1",
         "otp-generator": "^4.0.1",
-
+        "randomstring": "^1.3.0",
         "session": "^0.1.0",
         "stripe": "^14.4.0"
-
     }
 }
