--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
         "express-validator": "^7.0.1",
         "git": "^0.1.5",
         "jsonwebtoken": "^9.0.2",
+        "map": "^1.0.1",
         "mongoose": "^7.5.3",
         "multer": "^1.4.5-lts.1",
         "node": "^20.7.0",
