--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@img/sharp-win32-x64": "^0.33.0",
         "axios": "^1.5.1",
         "bcrypt": "^5.1.1",
         "cookie-parser": "^1.4.6",
@@ -28,6 +29,7 @@
         "otp-generator": "^4.0.1",
         "randomstring": "^1.3.0",
         "session": "^0.1.0",
+        "sharp": "^0.33.0",
         "stripe": "^14.4.0"
     }
 }
