--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "fs": "^0.0.1-security",
+    "image-compressor": "^2.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-burger-menu": "^3.0.9",
