--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,15 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-burger-menu": "^3.0.9",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
